logs/lymaker.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/LyMaker'...
Compiling './lib/python3.5/site-packages/LyMaker/HarmonyMaker.py'...
***   File "./lib/python3.5/site-packages/LyMaker/HarmonyMaker.py", line 34
    print "Chord note %s not in list" % note
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/LyMaker/LyMk.py'...
***   File "./lib/python3.5/site-packages/LyMaker/LyMk.py", line 120
    print "%d is not a valid value for quarters" % quarters
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/LyMaker/MelodyMaker.py'...
***   File "./lib/python3.5/site-packages/LyMaker/MelodyMaker.py", line 146
    print "WARNING melody: chord note %s is not in scale" % (note)
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/LyMaker/ScaleUtil.py'...
***   File "./lib/python3.5/site-packages/LyMaker/ScaleUtil.py", line 57
    print "get: wrong note offset %d" % (index)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/LyMaker/Utils.py'...
***   File "./lib/python3.5/site-packages/LyMaker/Utils.py", line 13
    print "Duration %d not in list" % duration
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/LyMaker/xmlreader.py'...
***   File "./lib/python3.5/site-packages/LyMaker/xmlreader.py", line 217
    except Exception,exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/LyMaker-0.5.4.1.egg-info'...
Compiling './lib/python3.5/site-packages/LyMaker.py'...
***   File "./lib/python3.5/site-packages/LyMaker.py", line 12
    print "LyMaker (Version %s)" % VERSION
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/LyWizard.py'...
***   File "./lib/python3.5/site-packages/LyWizard.py", line 79
    print "I don't know this chord: %s base: %s" % (input,base)
                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/testLyMaker.py'...
***   File "./lib/python3.5/site-packages/testLyMaker.py", line 925
    print "Cannot open %s" % (self.filename + ".ly")
                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/LyMaker'...
Listing './share/LyMaker/examples'...
Listing './share/LyMaker/examples/ly'...
Listing './share/LyMaker/examples/midi'...
Listing './share/LyMaker/examples/mp3'...
Listing './share/LyMaker/examples/pdf'...
Listing './share/LyMaker/examples/xml'...
Listing './share/doc'...
Listing './share/doc/packages'...
Listing './share/doc/packages/LyMaker'...
Listing './share/python-wheels'...
